src/com/bajdcc/grammar/PrologParser.java
// Generated from O:/java_project/jProlog\Prolog.g4 by ANTLR 4.5.1
package com.bajdcc.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrologParser extends Parser {
    public static final int
            Existential = 1, Universal = 2, NOT = 3, ART1 = 4, ART2 = 5, CMP1 = 6, CMP2 = 7, CMP3 = 8,
            CMP4 = 9, LOG1 = 10, LOG2 = 11, XOR = 12, IMPLY = 13, SEMI = 14, COMMA = 15, RANGE = 16,
            LeftParen = 17, RightParen = 18, LeftBracket = 19, RightBracket = 20, LeftBrace = 21,
            RightBrace = 22, ID = 23, Literal = 24, Number = 25, Whitespace = 26, Newline = 27,
            BlockComment = 28, LineComment = 29;
    public static final int
            RULE_start = 0, RULE_definitions = 1, RULE_definition = 2, RULE_setDef = 3,
            RULE_setParams = 4, RULE_setParam = 5, RULE_variableDef = 6, RULE_vDef1 = 7,
            RULE_vDef2 = 8, RULE_vDef3 = 9, RULE_typeParams = 10, RULE_conditionDef = 11,
            RULE_quantifiers = 12, RULE_quantifier = 13, RULE_parameters = 14, RULE_expression = 15;
    public static final String[] ruleNames = {
            "start", "definitions", "definition", "setDef", "setParams", "setParam",
            "variableDef", "vDef1", "vDef2", "vDef3", "typeParams", "conditionDef",
            "quantifiers", "quantifier", "parameters", "expression"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'存在'", "'�?�?'", null, null, null, null, null, null, null, null,
            null, null, null, "';'", "','", "'..'", "'('", "')'", "'['", "']'", "'{'",
            "'}'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "Existential", "Universal", "NOT", "ART1", "ART2", "CMP1", "CMP2",
            "CMP3", "CMP4", "LOG1", "LOG2", "XOR", "IMPLY", "SEMI", "COMMA", "RANGE",
            "LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace",
            "RightBrace", "ID", "Literal", "Number", "Whitespace", "Newline", "BlockComment",
            "LineComment"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public PrologParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Prolog.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final StartContext start() throws RecognitionException {
        StartContext _localctx = new StartContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_start);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(32);
                definitions();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefinitionsContext definitions() throws RecognitionException {
        DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_definitions);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(35);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(34);
                            definition();
                        }
                    }
                    setState(37);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Existential) | (1L << Universal) | (1L << NOT) | (1L << LeftParen) | (1L << ID) | (1L << Literal) | (1L << Number))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefinitionContext definition() throws RecognitionException {
        DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_definition);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(42);
                switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                    case 1: {
                        setState(39);
                        setDef();
                    }
                    break;
                    case 2: {
                        setState(40);
                        variableDef();
                    }
                    break;
                    case 3: {
                        setState(41);
                        conditionDef();
                    }
                    break;
                }
                setState(44);
                match(SEMI);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SetDefContext setDef() throws RecognitionException {
        SetDefContext _localctx = new SetDefContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_setDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                ((SetDefContext) _localctx).type = match(ID);
                setState(47);
                match(LeftBrace);
                setState(48);
                match(RightBrace);
                setState(49);
                match(CMP3);
                setState(50);
                match(LeftBrace);
                setState(51);
                setParams();
                setState(52);
                match(RightBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SetParamsContext setParams() throws RecognitionException {
        SetParamsContext _localctx = new SetParamsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_setParams);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                setParam();
                setState(59);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(55);
                            match(COMMA);
                            setState(56);
                            setParam();
                        }
                    }
                    setState(61);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SetParamContext setParam() throws RecognitionException {
        SetParamContext _localctx = new SetParamContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_setParam);
        try {
            setState(67);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(62);
                    ((SetParamContext) _localctx).string = match(Literal);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(63);
                    ((SetParamContext) _localctx).num = match(Number);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(64);
                    ((SetParamContext) _localctx).lower = match(Number);
                    setState(65);
                    match(RANGE);
                    setState(66);
                    ((SetParamContext) _localctx).upper = match(Number);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VariableDefContext variableDef() throws RecognitionException {
        VariableDefContext _localctx = new VariableDefContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_variableDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(69);
                ((VariableDefContext) _localctx).type = match(ID);
                setState(76);
                switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                    case 1: {
                        setState(70);
                        vDef1();
                    }
                    break;
                    case 2: {
                        setState(71);
                        vDef2();
                        setState(72);
                        match(LeftBracket);
                        setState(73);
                        match(RightBracket);
                    }
                    break;
                    case 3: {
                        setState(75);
                        vDef3();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VDef1Context vDef1() throws RecognitionException {
        VDef1Context _localctx = new VDef1Context(_ctx, getState());
        enterRule(_localctx, 14, RULE_vDef1);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                ((VDef1Context) _localctx).id = match(ID);
                setState(83);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(79);
                            match(COMMA);
                            setState(80);
                            ((VDef1Context) _localctx).id = match(ID);
                        }
                    }
                    setState(85);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VDef2Context vDef2() throws RecognitionException {
        VDef2Context _localctx = new VDef2Context(_ctx, getState());
        enterRule(_localctx, 16, RULE_vDef2);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                ((VDef2Context) _localctx).id = match(ID);
                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(87);
                            match(COMMA);
                            setState(88);
                            ((VDef2Context) _localctx).id = match(ID);
                        }
                    }
                    setState(93);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VDef3Context vDef3() throws RecognitionException {
        VDef3Context _localctx = new VDef3Context(_ctx, getState());
        enterRule(_localctx, 18, RULE_vDef3);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                ((VDef3Context) _localctx).id = match(ID);
                setState(95);
                match(LeftParen);
                setState(96);
                typeParams();
                setState(97);
                match(RightParen);
                setState(106);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(98);
                            match(COMMA);
                            setState(99);
                            ((VDef3Context) _localctx).id = match(ID);
                            setState(100);
                            match(LeftParen);
                            setState(101);
                            typeParams();
                            setState(102);
                            match(RightParen);
                        }
                    }
                    setState(108);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TypeParamsContext typeParams() throws RecognitionException {
        TypeParamsContext _localctx = new TypeParamsContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_typeParams);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(109);
                match(ID);
                setState(114);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(110);
                            match(COMMA);
                            setState(111);
                            match(ID);
                        }
                    }
                    setState(116);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConditionDefContext conditionDef() throws RecognitionException {
        ConditionDefContext _localctx = new ConditionDefContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_conditionDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                _la = _input.LA(1);
                if (_la == Existential || _la == Universal) {
                    {
                        setState(117);
                        quantifiers();
                    }
                }

                setState(120);
                expression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QuantifiersContext quantifiers() throws RecognitionException {
        QuantifiersContext _localctx = new QuantifiersContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_quantifiers);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(122);
                quantifier();
                setState(127);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(123);
                            match(COMMA);
                            setState(124);
                            quantifier();
                        }
                    }
                    setState(129);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QuantifierContext quantifier() throws RecognitionException {
        QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_quantifier);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(130);
                _la = _input.LA(1);
                if (!(_la == Existential || _la == Universal)) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
                setState(131);
                ((QuantifierContext) _localctx).type = match(ID);
                setState(132);
                ((QuantifierContext) _localctx).id = match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParametersContext parameters() throws RecognitionException {
        ParametersContext _localctx = new ParametersContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_parameters);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(134);
                expression(0);
                setState(139);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(135);
                            match(COMMA);
                            setState(136);
                            expression(0);
                        }
                    }
                    setState(141);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        return expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
        ExpressionContext _prevctx = _localctx;
        int _startState = 30;
        enterRecursionRule(_localctx, 30, RULE_expression, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(161);
                switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                    case 1: {
                        setState(143);
                        ((ExpressionContext) _localctx).uop = match(NOT);
                        setState(144);
                        expression(11);
                    }
                    break;
                    case 2: {
                        setState(145);
                        match(ID);
                    }
                    break;
                    case 3: {
                        setState(146);
                        match(Number);
                    }
                    break;
                    case 4: {
                        setState(147);
                        match(Literal);
                    }
                    break;
                    case 5: {
                        setState(148);
                        match(LeftParen);
                        setState(149);
                        expression(0);
                        setState(150);
                        match(RightParen);
                    }
                    break;
                    case 6: {
                        setState(152);
                        ((ExpressionContext) _localctx).id = match(ID);
                        setState(153);
                        match(LeftParen);
                        setState(154);
                        parameters();
                        setState(155);
                        match(RightParen);
                    }
                    break;
                    case 7: {
                        setState(157);
                        ((ExpressionContext) _localctx).id = match(ID);
                        setState(158);
                        match(LeftBracket);
                        setState(159);
                        match(Number);
                        setState(160);
                        match(RightBracket);
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(195);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 14, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(193);
                            switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                                case 1: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(163);
                                    if (!(precpred(_ctx, 10)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 10)");
                                    setState(164);
                                    ((ExpressionContext) _localctx).bop = match(ART1);
                                    setState(165);
                                    expression(11);
                                }
                                break;
                                case 2: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(166);
                                    if (!(precpred(_ctx, 9)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 9)");
                                    setState(167);
                                    ((ExpressionContext) _localctx).bop = match(ART2);
                                    setState(168);
                                    expression(10);
                                }
                                break;
                                case 3: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(169);
                                    if (!(precpred(_ctx, 8)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 8)");
                                    setState(170);
                                    ((ExpressionContext) _localctx).bop = match(CMP1);
                                    setState(171);
                                    expression(9);
                                }
                                break;
                                case 4: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(172);
                                    if (!(precpred(_ctx, 7)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 7)");
                                    setState(173);
                                    ((ExpressionContext) _localctx).bop = match(CMP2);
                                    setState(174);
                                    expression(8);
                                }
                                break;
                                case 5: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(175);
                                    if (!(precpred(_ctx, 6)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                    setState(176);
                                    ((ExpressionContext) _localctx).bop = match(CMP3);
                                    setState(177);
                                    expression(7);
                                }
                                break;
                                case 6: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(178);
                                    if (!(precpred(_ctx, 5)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                    setState(179);
                                    ((ExpressionContext) _localctx).bop = match(CMP4);
                                    setState(180);
                                    expression(6);
                                }
                                break;
                                case 7: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(181);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(182);
                                    ((ExpressionContext) _localctx).bop = match(LOG1);
                                    setState(183);
                                    expression(5);
                                }
                                break;
                                case 8: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(184);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(185);
                                    ((ExpressionContext) _localctx).bop = match(LOG2);
                                    setState(186);
                                    expression(4);
                                }
                                break;
                                case 9: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(187);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(188);
                                    ((ExpressionContext) _localctx).bop = match(XOR);
                                    setState(189);
                                    expression(3);
                                }
                                break;
                                case 10: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(190);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(191);
                                    ((ExpressionContext) _localctx).bop = match(IMPLY);
                                    setState(192);
                                    expression(2);
                                }
                                break;
                            }
                        }
                    }
                    setState(197);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 14, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 15:
                return expression_sempred((ExpressionContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean expression_sempred(ExpressionContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 10);
            case 1:
                return precpred(_ctx, 9);
            case 2:
                return precpred(_ctx, 8);
            case 3:
                return precpred(_ctx, 7);
            case 4:
                return precpred(_ctx, 6);
            case 5:
                return precpred(_ctx, 5);
            case 6:
                return precpred(_ctx, 4);
            case 7:
                return precpred(_ctx, 3);
            case 8:
                return precpred(_ctx, 2);
            case 9:
                return precpred(_ctx, 1);
        }
        return true;
    }

    public static class StartContext extends ParserRuleContext {
        public StartContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public DefinitionsContext definitions() {
            return getRuleContext(DefinitionsContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_start;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).enterStart(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).exitStart(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PrologVisitor) return ((PrologVisitor<? extends T>) visitor).visitStart(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class DefinitionsContext extends ParserRuleContext {
        public DefinitionsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<DefinitionContext> definition() {
            return getRuleContexts(DefinitionContext.class);
        }

        public DefinitionContext definition(int i) {
            return getRuleContext(DefinitionContext.class, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_definitions;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).enterDefinitions(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).exitDefinitions(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PrologVisitor) return ((PrologVisitor<? extends T>) visitor).visitDefinitions(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class DefinitionContext extends ParserRuleContext {
        public DefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public TerminalNode SEMI() {
            return getToken(PrologParser.SEMI, 0);
        }

        public SetDefContext setDef() {
            return getRuleContext(SetDefContext.class, 0);
        }

        public VariableDefContext variableDef() {
            return getRuleContext(VariableDefContext.class, 0);
        }

        public ConditionDefContext conditionDef() {
            return getRuleContext(ConditionDefContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_definition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).enterDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).exitDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PrologVisitor) return ((PrologVisitor<? extends T>) visitor).visitDefinition(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SetDefContext extends ParserRuleContext {
        public Token type;

        public SetDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<TerminalNode> LeftBrace() {
            return getTokens(PrologParser.LeftBrace);
        }

        public TerminalNode LeftBrace(int i) {
            return getToken(PrologParser.LeftBrace, i);
        }

        public List<TerminalNode> RightBrace() {
            return getTokens(PrologParser.RightBrace);
        }

        public TerminalNode RightBrace(int i) {
            return getToken(PrologParser.RightBrace, i);
        }

        public TerminalNode CMP3() {
            return getToken(PrologParser.CMP3, 0);
        }

        public SetParamsContext setParams() {
            return getRuleContext(SetParamsContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(PrologParser.ID, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_setDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).enterSetDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).exitSetDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PrologVisitor) return ((PrologVisitor<? extends T>) visitor).visitSetDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SetParamsContext extends ParserRuleContext {
        public SetParamsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public List<SetParamContext> setParam() {
            return getRuleContexts(SetParamContext.class);
        }

        public SetParamContext setParam(int i) {
            return getRuleContext(SetParamContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(PrologParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(PrologParser.COMMA, i);
        }

        @Override
        public int getRuleIndex() {
            return RULE_setParams;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).enterSetParams(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PrologListener) ((PrologListener) listener).exitSetParams(this);
        }
